@@ -36,3 +36,10 @@
 
 #include <jccl/Util/Debug.h> /* my header */
 
+// Register categories
+vprREGISTER_DBG_CATEGORY(DBG_JACKAL_SERVER,jcclDBG_SERVER);
+vprREGISTER_DBG_CATEGORY(DBG_JACKAL_PERFORMANCE,jcclDBG_PERFORMANCE);
+vprREGISTER_DBG_CATEGORY(DBG_CONFIGDB, jcclDBG_CONFIG);
+vprREGISTER_DBG_CATEGORY(DBG_RECONFIGURATION, jcclDBG_RECONFIGURATION);
+
+
