@@ -41,15 +41,8 @@
 
 // Jackal categories
 const vpr::GUID jcclDBG_SERVER("1ca1e39f-d798-47f5-acd6-105c4d490476");
-vprREGISTER_DBG_CATEGORY(DBG_JACKAL_SERVER,jcclDBG_SERVER);
-
 const vpr::GUID jcclDBG_PERFORMANCE("02acc29d-6f09-4498-bf38-23b02cd39084");
-vprREGISTER_DBG_CATEGORY(DBG_JACKAL_PERFORMANCE,jcclDBG_PERFORMANCE);
-
 const vpr::GUID jcclDBG_CONFIG("a0b2de1f-ce63-489b-8248-f03ef56d36f7");
-vprREGISTER_DBG_CATEGORY(DBG_CONFIGDB, jcclDBG_CONFIG);
-
 const vpr::GUID jcclDBG_RECONFIGURATION("94a6e028-b810-40e5-b6fd-e41b1a74db0e");
-vprREGISTER_DBG_CATEGORY(DBG_RECONFIGURATION, jcclDBG_RECONFIGURATION);
 
 #endif
